# barangay-api

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
barangay_api/: __init__.py  main.py
