[project]
name = "barangay-api"
version = "0.1.0"
description = "FastAPI Wrapper for barangay"
authors = [
    {name = "bendlikeabamboo",email = "mbalmeo32@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "barangay (>=2025.7.31.0,<9999.0.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
